# cnctl

./: .mise.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cliff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: auth.rs  client.rs  config.rs  lib.rs  main.rs  template.rs  ui.rs
src/commands/: admin_status.rs  login.rs  logout.rs  mod.rs  proposals.rs  proposals.rs.new  sponsors.rs  status.rs
src/commands/proposals/: args.rs  display.rs  filters.rs  interactive.rs  mod.rs  review.rs  tests.rs
src/commands/sponsors/: args.rs  email.rs  interactive.rs  mod.rs
src/display/: mod.rs  proposal.rs  sponsor.rs  status.rs
src/types/: email_template.rs  mod.rs  proposal.rs  sponsor.rs  status.rs
src/ui/: mod.rs  pager.rs
tests/: e2e.rs
