[package]
name = "cnctl"
version = "0.1.0"
edition = "2024"
description = "CLI for Cloud Native Days Norway"
license = "MIT"
repository = "https://github.com/CloudNativeBergen/cnctl"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
dialoguer = "0.12"
dirs = "6"
open = "5"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["full"] }
toml = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
used_underscore_binding = "allow"
items_after_statements = "allow"
